test/ui/tests/name-resolution/exposure/re-export-more-private-bindings.stderr
error[E009]: re-export of the more private binding `topmost.Thing`
 --> ${TEST_FOLDER}/name-resolution/exposure/re-export-more-private-bindings.lushui:4:14
  |
4 | use Thing as Piece
  |              ^^^^^ re-exporting binding with greater exposure
  |
 --> ${TEST_FOLDER}/name-resolution/exposure/re-export-more-private-bindings.lushui:7:6
  |
7 | data Thing: Type of
  |      ----- re-exported binding with lower exposure
  |
 note: expected the exposure of `topmost.Piece`
                  to be at most `topmost`
             but it actually is unrestricted

error[E009]: re-export of the more private binding `topmost.alpha.beta.Linchpin`
  --> ${TEST_FOLDER}/name-resolution/exposure/re-export-more-private-bindings.lushui:12:14
   |
12 |         data Linchpin: Type of
   |              -------- re-exported binding with lower exposure
   |
  --> ${TEST_FOLDER}/name-resolution/exposure/re-export-more-private-bindings.lushui:16:35
   |
16 |             use super.Linchpin as L
   |                                   ^ re-exporting binding with greater exposure
   |
  note: expected the exposure of `topmost.alpha.beta.gamma.L`
                   to be at most `topmost.alpha.beta`
              but it actually is `topmost`

error[E009]: re-export of the more private binding `topmost.alpha.beta.gamma.Mock`
  --> ${TEST_FOLDER}/name-resolution/exposure/re-export-more-private-bindings.lushui:19:18
   |
19 |             data Mock: Type of
   |                  ---- re-exported binding with lower exposure
   |
  --> ${TEST_FOLDER}/name-resolution/exposure/re-export-more-private-bindings.lushui:22:25
   |
22 |             use Mock as //>
   |                         ^^^ re-exporting binding with greater exposure
   |
  note: expected the exposure of `topmost.alpha.beta.gamma.//>`
                   to be at most `topmost.alpha.beta`
              but it actually is `topmost.alpha`

error: aborting due to 3 previous errors

