test/ui/tests/name-resolution/exposure/re-export-more-private-bindings.lushui
;;; TEST fail check

@public
use Thing as Piece

@(public capsule)
data Thing: Type of
    thing: Thing

module alpha of
    module beta of
        data Linchpin: Type of

        module gamma of
            @(public capsule)
            use super.Linchpin as L

            @(public super)
            data Mock: Type of

            @(public capsule.alpha)
            use Mock as //>
